automationscripts/cft/network/CreateVPC_PublicSubnet.yaml
Resources:
    ## As of Mar 2026, Public address can only be assigned via CloudFormation script if DeviceIndex = 0 & we are creating a new Network interface (VPC and PublicSubnet)
    TrimDiceVPC:
        Type: AWS::EC2::VPC
        Properties:
          CidrBlock: 10.0.0.0/16
          EnableDnsSupport: 'true'
          EnableDnsHostnames: 'true'
          Tags:
          - Key: Name
            Value: TrimDiceVPC
    TrimDicePublicSubnet:
        Type: AWS::EC2::Subnet
        Properties:
          VpcId:
            Ref: TrimDiceVPC
          CidrBlock: 10.0.0.0/24
          AvailabilityZone: "ap-south-1b"  
          Tags:
          - Key: Name
            Value: TrimDicePubSubnet
    
    # Defined a security group for Kubernetes Control Plane 
    ControlPlaneSG:
        Type: AWS::EC2::SecurityGroup
        Properties:
          VpcId:
            Ref: TrimDiceVPC
          GroupName: ControlPlaneSG
          GroupDescription: "Security group for Control Plane to associate with TrimDicePublicSubnet"
          SecurityGroupEgress:
            - IpProtocol: -1
              CidrIp: "0.0.0.0/0"
          SecurityGroupIngress:
          # Standard SSH login access:
            - IpProtocol: tcp
              FromPort: 22
              ToPort: 22
              CidrIp: "0.0.0.0/0"
              Description: "Standard SSH login access"
          # Ping access:
            - IpProtocol: icmp
              FromPort: 8
              ToPort: -1
              CidrIp: "0.0.0.0/0"
              Description: "Ping Access"
          # Access to Kubernetes API server within the VPC only 
            - IpProtocol: tcp
              FromPort: 6443
              ToPort: 6443
              CidrIp: "10.0.0.0/16"  
              Description: "Access to Kubernetes API server within the VPC only"
          # Access to etcd server API (used by kube-apiserver & etcd) within the VPC only 
            - IpProtocol: tcp
              FromPort: 2379
              ToPort: 2380
              CidrIp: "10.0.0.0/16"
              Description: "Access to etcd server API (used by kube-apiserver & etcd) within the VPC only"
          # Access to kubelet API within the VPC only 
            - IpProtocol: tcp
              FromPort: 10250
              ToPort: 10250
              CidrIp: "10.0.0.0/16"
              Description: "Access to kubelet API within the VPC only"
          # Access to kube-scheduler within the VPC only 
            - IpProtocol: tcp
              FromPort: 10259
              ToPort: 10259
              CidrIp: "10.0.0.0/16"
              Description: "Access to kube-scheduler within the VPC only"
          # Access to kube-controller-manager within the VPC only 
            - IpProtocol: tcp
              FromPort: 10257
              ToPort: 10257
              CidrIp: "10.0.0.0/16"   
              Description: "Access to kube-controller-manager within the VPC only"           
  
    DataPlaneSG:
        Type: AWS::EC2::SecurityGroup
        Properties:
          VpcId:
            Ref: TrimDiceVPC
          GroupName: DataPlaneSG
          GroupDescription: "Security group for Data Plane (Worker nodes) to associate with TrimDicePublicSubnet"
          SecurityGroupEgress:
            - IpProtocol: -1
              CidrIp: "0.0.0.0/0"
          SecurityGroupIngress:
          # Standard SSH login access:
            - IpProtocol: tcp
              FromPort: 22
              ToPort: 22
              CidrIp: "0.0.0.0/0"
              Description: "Standard SSH login access"
          # Ping access:
            - IpProtocol: icmp
              FromPort: 8
              ToPort: -1
              CidrIp: "0.0.0.0/0"
              Description: "Ping access"
          # Access to kubelet API within the VPC only 
            - IpProtocol: tcp
              FromPort: 10250
              ToPort: 10250
              CidrIp: "10.0.0.0/16"
              Description: "Access to kubelet API within the VPC only"
          # Access to kube-proxy within the VPC only 
            - IpProtocol: tcp
              FromPort: 10256
              ToPort: 10256
              CidrIp: "10.0.0.0/16"
              Description: "Access to kube-proxy within the VPC only"
          # Access to NodePort Services standard ports within the VPC only 
            - IpProtocol: tcp
              FromPort: 30000
              ToPort: 32767
              CidrIp: "10.0.0.0/16"  
              Description: "Access to NodePort Services standard ports within the VPC only"            
          # Access to NodePort Services standard ports within the VPC only 
            - IpProtocol: udp
              FromPort: 30000
              ToPort: 32767
              CidrIp: "10.0.0.0/16"  
              Description: "Access to NodePort Services standard ports within the VPC only"            

    # Attached Internet gateway for Internet access
    TDIGW:
        Type: AWS::EC2::InternetGateway
        Properties:
          Tags:
          - Key: Name
            Value: TrimDiceIGW 
    # Doc Reference: https://docs.aws.amazon.com/AWSCloudFormation/latest/TemplateReference/aws-resource-ec2-vpcgatewayattachment.html#aws-resource-ec2-vpcgatewayattachment--examples
    TDVPCGWAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
          VpcId:
            Ref: TrimDiceVPC
          InternetGatewayId:
            Ref: TDIGW
    
    # ClaudeAI helped - Add IGW route
    TrimDiceRoute:
        Type: AWS::EC2::Route
        DependsOn: TDVPCGWAttachment
        Properties:
          RouteTableId:
            Ref: TrimDiceRouteTable
          DestinationCidrBlock: "0.0.0.0/0"
          GatewayId:
            Ref: TDIGW
    TrimDiceRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
          VpcId:
            Ref: TrimDiceVPC
          Tags:
          - Key: Name
            Value: TrimDiceRouteTable
    # Associate route table with subnet
    TrimDiceSubnetRTAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
          SubnetId:
            Ref: TrimDicePublicSubnet
          RouteTableId:
            Ref: TrimDiceRouteTable
            
Outputs:
  VpcId:
    Value:
      Ref: TrimDiceVPC
    Export:
      Name: TrimDice-VpcId
  SubnetId:
    Value:
      Ref: TrimDicePublicSubnet
    Export:
      Name: TrimDice-SubnetId 
  ControlPlaneSGId:
    Value:
      Ref: ControlPlaneSG
    Export:
      Name: ControlPlaneSGId
  DataPlaneSGId:
    Value:
      Ref: DataPlaneSG
    Export:
      Name: DataPlaneSGId
